--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -7,4 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: my-step
-        run: echo "Ran from API Call"
+        run: 'echo "Event text: ${{ github.event.client_payload.text }}"'
